[gd_scene load_steps=6 format=2]

[ext_resource path="res://shared/bestia_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/BestiaPortraits/BestiaPortrait/BestiaPortrait.gd" type="Script" id=2]
[ext_resource path="res://placeholder.png" type="Texture" id=3]
[ext_resource path="res://shared/fonts/OpenSans_RegularNormal.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/Bar/Bar.tscn" type="PackedScene" id=5]






[node name="BestiaPortrait" type="MarginContainer"]
margin_right = 174.0
margin_bottom = 64.0
theme = ExtResource( 1 )
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 10.0
margin_top = 5.0
margin_right = 174.0
margin_bottom = 60.0

[node name="Wrapper" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 157.0
margin_bottom = 48.0
custom_constants/separation = 10

[node name="Portrait" type="TextureRect" parent="PanelContainer/Wrapper"]
margin_right = 40.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Content" type="VBoxContainer" parent="PanelContainer/Wrapper"]
margin_left = 50.0
margin_right = 150.0
margin_bottom = 41.0

[node name="NameMargin" type="MarginContainer" parent="PanelContainer/Wrapper/Content"]
margin_right = 100.0
margin_bottom = 21.0
custom_constants/margin_bottom = 1

[node name="BestiaName" type="Label" parent="PanelContainer/Wrapper/Content/NameMargin"]
margin_right = 100.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "BestiaName"

[node name="BarHp" parent="PanelContainer/Wrapper/Content" instance=ExtResource( 5 )]
margin_top = 25.0
margin_bottom = 31.0

[node name="BarMana" parent="PanelContainer/Wrapper/Content" instance=ExtResource( 5 )]
margin_top = 35.0
margin_bottom = 41.0
primary_color = Color( 0, 0.372549, 1, 1 )
[connection signal="gui_input" from="PanelContainer" to="." method="_on_PanelContainer_gui_input"]
